--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,8 +1,43 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Font?>
+
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="Controller">
+   <children>
+      <AnchorPane prefHeight="500.0" prefWidth="500.0">
+         <children>
+            <TableView fx:id="tableView" layoutX="36.0" layoutY="28.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="429.0">
+              <columns>
+                <TableColumn fx:id="dateColumn" prefWidth="101.0" text="date" />
+                <TableColumn fx:id="amountColumn" prefWidth="78.0" text="amount" />
+                  <TableColumn fx:id="typeColumn" prefWidth="83.0" text="type" />
+                  <TableColumn fx:id="descriptionColumn" prefWidth="166.0" text="description" />
+              </columns>
+            </TableView>
+            <TextField fx:id="amountTextFiled" layoutX="102.0" layoutY="260.0" prefHeight="25.0" prefWidth="101.0" />
+            <Label layoutX="36.0" layoutY="264.0" text="Amount" />
+            <TextArea fx:id="descriptionTextArea" layoutX="102.0" layoutY="300.0" prefHeight="78.0" prefWidth="193.0" />
+            <Button fx:id="addButton" layoutX="102.0" layoutY="407.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="61.0" text="Add" />
+            <Label layoutX="36.0" layoutY="331.0" text="Description" />
+            <Button fx:id="cancelButton" layoutX="204.0" layoutY="407.0" mnemonicParsing="false" onAction="#showBalance" prefHeight="25.0" prefWidth="93.0" text="Show Balance" />
+            <RadioButton fx:id="depositRB" layoutX="220.0" layoutY="264.0" mnemonicParsing="false" text="deposit" />
+            <RadioButton fx:id="expenseRB" layoutX="295.0" layoutY="264.0" mnemonicParsing="false" text="expense" />
+            <Label fx:id="balanceLabel" layoutX="314.0" layoutY="296.0" prefHeight="88.0" prefWidth="180.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </children>
 </GridPane>
