--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -29,7 +29,7 @@
             <TextArea fx:id="descriptionTextArea" layoutX="102.0" layoutY="300.0" prefHeight="78.0" prefWidth="193.0" />
             <Button fx:id="addButton" layoutX="102.0" layoutY="407.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="61.0" text="Add" />
             <Label layoutX="36.0" layoutY="331.0" text="Description" />
-            <Button fx:id="cancelButton" layoutX="204.0" layoutY="407.0" mnemonicParsing="false" onAction="#showBalance" prefHeight="25.0" prefWidth="93.0" text="Show Balance" />
+            <Button fx:id="showBalanceButton" layoutX="204.0" layoutY="407.0" mnemonicParsing="false" onAction="#showBalance" prefHeight="25.0" prefWidth="93.0" text="Show Balance" />
             <RadioButton fx:id="depositRB" layoutX="220.0" layoutY="264.0" mnemonicParsing="false" text="deposit" />
             <RadioButton fx:id="expenseRB" layoutX="295.0" layoutY="264.0" mnemonicParsing="false" text="expense" />
             <Label fx:id="balanceLabel" layoutX="314.0" layoutY="296.0" prefHeight="88.0" prefWidth="180.0">
